--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -27,24 +27,11 @@
             </div>
         </div>
     </div>
-    <div th:each="question : ${allQuestions}">
-        <div class="question" th:text="${question.questionText}"></div>
 
+    <div class ="games">
 
-        <div class="word-images">
-
-            <div class="row images-row">
-                <div class="answer-option" th:each="option : ${question.answerOptions}">
-                    <a class="answer-anchor"th:href="@{/selectAnswer/{questionId}/{optionId}(questionId = ${question.id}, optionId = ${option.id})}">
-                        <img th:src="${option.imagePath}">
-                        <div class="answer-text" th:text="${option.wordFrench}">
-                        </div>
-                    </a>
-                </div>
-
-            </div>
-        </div>
     </div>
+
 </div>
 
 </body>
