--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,42 +9,43 @@
     <div class="column user-info-column">
         <div class="row user-info-row">
             <img th:src="@{/images/user.png}">
-            <div th:text="${currentUser}">
-            </div>
+            <div th:text="${currentUser}"></div>
         </div>
-
 
         <div class="row user-info-row">
             <img th:src="@{/images/coin.png}">
-            <div th:text="'Max score: 50'">
-            </div>
+            <div th:text="'Max score: 50'"></div>
         </div>
-
 
         <div class="row user-info-row">
             <img th:src="@{/images/danger.png}">
-            <div th:text="'Streaks: 5 days in a row!'">
-            </div>
+            <div th:text="'Streaks: 5 days in a row!'"></div>
         </div>
+
     </div>
+
+
+    <div th:if="${errorMsg != null}" th:text="${errorMsg}" class="errorMsg"></div>
+
     <div th:each="question : ${allQuestions}">
         <div class="question" th:text="${question.questionText}"></div>
 
-
         <div class="word-images">
-
             <div class="row images-row">
                 <div class="answer-option" th:each="option : ${question.answerOptions}">
-                    <a class="answer-anchor"th:href="@{/selectAnswer/{questionId}/{optionId}(questionId = ${question.id}, optionId = ${option.id})}">
+                    <a class="answer-anchor"
+                       th:href="@{/selectAnswer/{questionId}/{optionId}(questionId = ${question.id}, optionId = ${option.id})}">
                         <img th:src="${option.imagePath}">
-                        <div class="answer-text" th:text="${option.wordFrench}">
-                        </div>
+                        <div class="answer-text" th:text="${option.wordFrench}"></div>
                     </a>
                 </div>
-
             </div>
+
         </div>
+
     </div>
+
+
 </div>
 
 </body>
