tidying up html side, added complete button

--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-    <div class="column user-info-column">
+    <div class="row user-stats-row">
         <div class="row user-info-row">
             <img th:src="@{/images/user.png}">
             <div th:text="${currentUser}">
