--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,7 +11,7 @@ body{
 
 .container{
     width: 70%;
-    margin: 7% auto;
+    margin: 2% auto;
     text-align: center;
     min-height: 500px;
 
@@ -83,9 +83,6 @@ flex-direction: column;
 margin: 7% 0;
 }
 
-.user-info-row img{
-    width: 20%;
-}
 
 .user-info-row div{
     margin-top: 5%;
@@ -134,3 +131,40 @@ margin: 7% 0;
     font-size: 20px;
     border: 2px solid white;
 }
+.success-wrap{
+    width: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.success-wrap img{
+    width: 40%;
+    margin: 0 auto;
+}
+
+.user-stats-row{
+    margin: 3% 0;
+
+}
+
+.user-info-row img{
+    width: 50px;
+    height: 50px;
+}
+
+.user-info-row div{
+    margin: 10% 3%;
+}
+
+.custom-button{
+    text-decoration: none;
+    padding: 15px 20px;
+    background-color: #80ccff;
+    color: white;
+    width: auto;
+    text-align: center;
+    margin: 2% auto;
+}
+
+
