--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-    <div class="column user-info-column">
+    <div class="row user-stats-row">
         <div class="row user-info-row">
             <img th:src="@{/images/user.png}">
             <div th:text="${currentUser}"></div>
@@ -26,6 +26,13 @@
 
 
     <div th:if="${errorMsg != null}" th:text="${errorMsg}" class="errorMsg"></div>
+    <div th:if="${gameComplete == true}"  class = "success-wrap">
+        <h2>
+            GAME COMPLETE!
+        </h2>
+        <img th:src="@{~/images/tick.png}">
+        <a th:href="@{/}" class="custom-button"> Go Back</a>
+    </div>
 
     <div th:each="question : ${allQuestions}">
         <div class="question" th:text="${question.questionText}"></div>
