--- a/src/main/resources/templates/game_three.html
+++ b/src/main/resources/templates/game_three.html
@@ -34,7 +34,7 @@
 
 
     <div th:each="question : ${allQuestions}">
-        <div class="question">From options below select the applicable word based on the video below: </div>
+        <div class="question">From options below select the applicable sentence based on the video below: </div>
 
 
         <div class="word-images">
@@ -46,7 +46,7 @@
 
                 <div class="answer-option" th:each="option : ${question.answerOptions}">
                     <a class="answer-anchor"
-                       th:href="@{/selectAnswerForGameTwo/{questionId}/{optionId}(questionId = ${question.id}, optionId = ${option.id})}">
+                       th:href="@{/selectAnswerForGameThree/{questionId}/{optionId}(questionId = ${question.id}, optionId = ${option.id})}">
                         <div class="answer-text" th:text="${option.wordFrench}"></div>
                     </a>
 
