--- a/src/main/resources/templates/game_three.html
+++ b/src/main/resources/templates/game_three.html
@@ -40,14 +40,16 @@
         <div class="word-images">
             <div class="row images-row">
 
-                <video controls width="600" height="400">
-                    <source th:src="${question.videoPath}">
-                </video>
+                <div class="video-container">
+                    <div class="text">Video unavailable</div>
+                </div>
+
 
                 <div class="answer-option" th:each="option : ${question.answerOptions}">
                     <a class="answer-anchor"
                        th:href="@{/selectAnswerForGameThree/{questionId}/{optionId}(questionId = ${question.id}, optionId = ${option.id})}">
                         <div class="answer-text" th:text="${option.wordFrench}"></div>
+                        <div class="answer-text" th:text="${option.wordEnglish}"></div>
                     </a>
 
                 </div>
