--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -180,3 +180,13 @@ margin: 7% 0;
     font-style: italic;
 }
 
+.resume-button{
+    text-decoration: none;
+    font-size: 20px;
+    background-color: #80ccff;
+    color: white;
+    padding: 10px;
+}
+.video-wrap{
+    margin-bottom: 3%;
+}
