--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -190,3 +190,12 @@ margin: 7% 0;
 .video-wrap{
     margin-bottom: 3%;
 }
+
+.logout-btn{
+    text-decoration: none;
+    font-size: 20px;
+    background-color: #80ccff;
+    color: white;
+    padding: 10px;
+    max-height: 30px;
+}
