--- a/src/main/resources/templates/video-page.html
+++ b/src/main/resources/templates/video-page.html
@@ -6,23 +6,10 @@
 
 <div class="container">
 
-    <div class="row user-stats-row">
-        <div class="row user-info-row">
-            <img th:src="@{/images/user.png}">
-            <div th:text="${currentUser}"></div>
-        </div>
+    <div th:replace="fragments/userinfo :: info"></div>
 
-        <div class="row user-info-row">
-            <img th:src="@{/images/coin.png}">
-            <div th:text="'Max score: 50'"></div>
-        </div>
 
-        <div class="row user-info-row">
-            <img th:src="@{/images/danger.png}">
-            <div th:text="'Streaks: 5 days in a row!'"></div>
-        </div>
 
-    </div>
 <div class="video-wrap">
     <video controls width="400" height="400">
         <source th:src="${question.videoPath}"/>
