--- a/src/main/resources/templates/game_two.html
+++ b/src/main/resources/templates/game_two.html
@@ -13,7 +13,7 @@
     <div th:if="${gameComplete == true}" class="success-wrap">
         <h2>GAME COMPLETE!</h2>
         <img th:src="@{~/images/tick.png}">
-        <a th:href="@{/}" class="custom-button">Go Back</a>
+        <a th:href="@{/index}" class="custom-button">Go Back</a>
     </div>
 
 
