--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
             GAME COMPLETE!
         </h2>
         <img th:src="@{~/images/tick.png}">
-        <a th:href="@{/}" class="custom-button"> Go Back</a>
+        <a th:href="@{/index}" class="custom-button"> Go Back</a>
     </div>
 
     <div th:each="question : ${allQuestions}">
