--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -199,3 +199,43 @@ margin: 7% 0;
     padding: 10px;
     max-height: 30px;
 }
+
+.form-header{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
+
+.reg-form{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.input-controls{
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-top: 15px;
+    width: 60%;
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.25;
+    color: #495057;
+    background-color: #fff;
+    background-image: none;
+    background-clip: padding-box;
+    border-radius: 0.25rem;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    border: 1px solid #ccc;
+    outline: none;
+}
+
+.submit-btn{
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
